--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,14 @@
     <name>turkish-thesis-clusterer</name>
     <url>http://maven.apache.org</url>
 
+    <developers>
+        <developer>
+            <name>Duygu Serbest</name>
+            <email>serbestduygu@gmail.com</email>
+            <url>https://duygu.io/</url>
+        </developer>
+    </developers>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -28,24 +36,42 @@
     </build>
 
     <dependencies>
+        <!-- Data Structure(Vector and SparseMatrix) Library -->
         <dependency>
             <groupId>org.apache.mahout</groupId>
             <artifactId>mahout-math</artifactId>
             <version>0.13.0</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <!-- Json Parser -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.1</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/jfree/jfreechart -->
+        <!-- Chart creation -->
         <dependency>
             <groupId>jfree</groupId>
             <artifactId>jfreechart</artifactId>
             <version>1.0.13</version>
+        </dependency>
+
+        <!-- Logging -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.9.1</version>
         </dependency>
 
         <dependency>
